--- a/index.html
+++ b/index.html
@@ -2,12 +2,48 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Calculator</title>
+    <link rel="stylesheet" href="./styles/master.css">
   </head>
   <body>
+  <div class='calc_buttons'>
+    <div class='number_div'>
+      <div class='row_1'>
+        <button type="button" class="calc_num" value="1" onmousedown="makeArray()">1</button>
+        <button type="button" class="calc_num" value="2" onmousedown="makeArray()">2</button>
+        <button type="button" class="calc_num" value="3" onmousedown="makeArray()">3</button>
+      </div>
+
+      <div class='row_2'>
+        <button type="button" class="calc_num" value="4" onmousedown="makeArray()">4</button>
+        <button type="button" class="calc_num" value="5" onmousedown="makeArray()">5</button>
+        <button type="button" class="calc_num" value="6" onmousedown="makeArray()">6</button>
+      </div>
+
+      <div class='row_3'>
+        <button type="button" class="calc_num" value="7" onmousedown="makeArray()">7</button>
+        <button type="button" class="calc_num" value="8" onmousedown="makeArray()">8</button>
+        <button type="button" class="calc_num" value="9" onmousedown="makeArray()">9</button>
+      </div>
+
+      <div class='row_4'>
+        <button type="button" class="calc_num" value="0" onmousedown="makeArray()">0</button>
+        <button type="button" class="total" value="=">=</button>
+      </div>
+    </div> <!-- ends numbers div  -->
+
+    <div class='column_op'>
+      <button type="button" class="calc_op" value="+">+</button>
+      <button type="button" class="calc_op" value="-">-</button>
+      <button type="button" class="calc_op" value="*">*</button>
+      <button type="button" class="calc_op" value="/">/</button>
+      <button type="button" class="calc_op" value="%">%</button>
+    </div>
+
+  </div>   <!-- ends calc_buttons -->
+
 
     <script type="text/javascript" src='js/main.js'>
-
     </script>
   </body>
 </html>
