feat(core) Link function with value; Store button value in array
Store button input in array to keep track of input

--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
   <div class='calc_buttons'>
     <div class='number_div'>
       <div class='row_1'>
-        <button type="button" class="calc_num" value="1" onmousedown="makeArray()">1</button>
-        <button type="button" class="calc_num" value="2" onmousedown="makeArray()">2</button>
-        <button type="button" class="calc_num" value="3" onmousedown="makeArray()">3</button>
+        <button type="button" class="calc_num" value="1" onmousedown="makeArray(value)">1</button>
+        <button type="button" class="calc_num" value="2" onmousedown="makeArray(value)">2</button>
+        <button type="button" class="calc_num" value="3" onmousedown="makeArray(value)">3</button>
       </div>
 
       <div class='row_2'>
-        <button type="button" class="calc_num" value="4" onmousedown="makeArray()">4</button>
-        <button type="button" class="calc_num" value="5" onmousedown="makeArray()">5</button>
-        <button type="button" class="calc_num" value="6" onmousedown="makeArray()">6</button>
+        <button type="button" class="calc_num" value="4" onmousedown="makeArray(value)">4</button>
+        <button type="button" class="calc_num" value="5" onmousedown="makeArray(value)">5</button>
+        <button type="button" class="calc_num" value="6" onmousedown="makeArray(value)">6</button>
       </div>
 
       <div class='row_3'>
-        <button type="button" class="calc_num" value="7" onmousedown="makeArray()">7</button>
-        <button type="button" class="calc_num" value="8" onmousedown="makeArray()">8</button>
-        <button type="button" class="calc_num" value="9" onmousedown="makeArray()">9</button>
+        <button type="button" class="calc_num" value="7" onmousedown="makeArray(value)">7</button>
+        <button type="button" class="calc_num" value="8" onmousedown="makeArray(value)">8</button>
+        <button type="button" class="calc_num" value="9" onmousedown="makeArray(value)">9</button>
       </div>
 
       <div class='row_4'>
-        <button type="button" class="calc_num" value="0" onmousedown="makeArray()">0</button>
+        <button type="button" class="calc_num" value="0" onmousedown="makeArray(value)">0</button>
         <button type="button" class="total" value="=">=</button>
       </div>
     </div> <!-- ends numbers div  -->
