feat(core) Add . button; Add styling to align buttons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 
       <div class='row_4'>
         <button type="button" class="calc_num" value="0" onmousedown="makeArray(value)">0</button>
+        <button type="button" class="calc_num" value="." onmousedown="makeArray(value)">.</button>
         <button type="button" class="total" value="clear" onmousedown="reload()">AC</button>
+      </div>
+
+      <div class='row_5'>
         <button type="button" class="total" value="=" onmousedown="answer()">=</button>
       </div>
     </div> <!-- ends numbers div  -->
