feat(core) Add button to make numbers negative

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./styles/master.css">
   </head>
   <body>
+    <div class="calc_whole">
 
     <div class="answer">
     </div>
@@ -38,6 +39,7 @@
       </div>
 
       <div class='row_5'>
+        <button type="button" class="negative" value="-" onmousedown="makeArray(value)">(-)</button>
         <button type="button" class="total" value="=" onmousedown="answer()">=</button>
       </div>
     </div> <!-- ends numbers div  -->
@@ -52,6 +54,7 @@
 
   </div>   <!-- ends calc_buttons -->
 
+</div>  <!-- ends calc_whole -->
 
 
     <script type="text/javascript" src='js/main.js'>
